# dragonfly-controller

./: .gitignore  ASAP_Tracking_3uas1t.m  ASAP_tracking.py  EOM.m  README.asciidoc  apm.launch  arm.py  armTest.py  build.sh  circumnavigate.txt  co2publisher.py  command.py  cyclonedds.xml  ddsa.py  geneticTSP.py  gps.py  guidedddsa.py  land.py  led.py  logger.py  lorenz.py  run.py  run.sh  run_simulation.sh  rundocker.sh  setup.sh  sketch.py  startup.sh  takeoff.py  takeoffTest.py
config/: apm.launch  dragonfly.service  logrotate.conf  service_readme.txt
docker/: Dockerfile  entrypoint.py  entrypoint.sh
scripts/: adhoc_update.sh  adhoc_update.yaml  inventory  multimaster.sh  playbook.yaml  setup.sh
scripts/config/: 10-dragonfly.rules  rc.local
src/dragonfly/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/dragonfly/dragonfly/: announce.py  arm.py  boundaryUtil.py  co2publisher.py  command.py  ddsa.py  droneStreamFactory.py  gps.py  guidedddsa.py  land.py  led.py  logger.py  logpositions.py  pump.py  takeoff.py  virtualRangefinder.py  virtualco2publisher.py  waypointUtil.py
src/dragonfly/dragonfly/actions/: ActionQueue.py  ActionState.py  AltitudeAction.py  ArmAction.py  ArmedStateAction.py  CalibrateAction.py  CircumnavigateAction.py  DisarmAction.py  EmptyAction.py  FlockingAction.py  GradientAction.py  LandAction.py  LogAction.py  MissionStartAction.py  ModeAction.py  PlumeAwareLawnmowerAction.py  PrintAction.py  PumpAction.py  RollercoasterAction.py  SemaphoreAction.py  SetPositionAction.py  SketchAction.py  SleepAction.py  StopFlockingAction.py  StopInPlaceAction.py  TakeoffAction.py  VerticalTransectDownAction.py  WaitForDisarmAction.py  WaitForZeroAction.py  WaypointAction.py  __init__.py
src/dragonfly/scripts/: announce.py  arm.py  boundaryUtil.py  co2publisher.py  command.py  ddsa.py  gps.py  guidedddsa.py  land.py  led.py  logger.py  logpositions.py  namebroadcast.py  takeoff.py  virtualco2publisher.py  waypointUtil.py
src/dragonfly/scripts/actions/: ActionQueue.py  ActionState.py  AltitudeAction.py  ArmAction.py  ArmedStateAction.py  DisarmAction.py  EmptyAction.py  FlockingAction.py  GradientAction.py  LandAction.py  LogAction.py  MissionStartAction.py  ModeAction.py  PrintAction.py  SemaphoreAction.py  SetPositionAction.py  SleepAction.py  StopInPlaceAction.py  TakeoffAction.py  WaitForDisarmAction.py  WaitForZeroAction.py  WaypointAction.py  WaypointDirectAction.py  __init__.py
src/dragonfly_dashboard/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
src/dragonfly_dashboard/dashboard/: build.gradle
src/dragonfly_dashboard/dashboard/src/main/java/edu/unm/dragonfly/: AddWaypointDialogFactory.java  DDSADialogFactory.java  Dashboard.java  DashboardApplication.java  DashboardController.java  DashboardModule.java  DisplaySceneSample.java  Drone.java  GeneticTSP.java  LawnmowerDialogFactory.java  Listener.java  NavigateWaypoint.java  ProjectedPoint.java  RandomPathDialogFactory.java  Talker.java  Walk.java
src/dragonfly_dashboard/dashboard/src/main/resources/: dashboard.fxml
src/dragonfly_messages/: CMakeLists.txt  package.xml  setup.cfg
src/dragonfly_messages/msg/: Boundary.msg  CO2.msg  Calibrate.msg  Curtain.msg  DDSAMission.msg  FlockMission.msg  GotoWaypoint.msg  LatLon.msg  LawnmowerMission.msg  MissionStep.msg  NavigationMission.msg  Plume.msg  PositionVector.msg  PumpMission.msg  Semaphore.msg  SemaphoreToken.msg  Sketch.msg  Takeoff.msg  VerticalTransect.msg  Waypoint.msg
src/dragonfly_messages/srv/: Circumnavigate.srv  DDSA.srv  DDSAWaypoints.srv  Flock.srv  Lawnmower.srv  LawnmowerWaypoints.srv  Mission.srv  Navigation.srv  Pump.srv  Setup.srv  SetupPlumes.srv  Simple.srv
src/dragonfly_messages_java/: CMakeLists.txt  package.xml
system_config/: 10-dragonfly.rules  interfaces
templates/: cyclonedds.xml.template  mavros.launch.yaml.template
