<?xml version="1.0"?>
<package format="2">
    <name>dragonfly</name>
    <version>0.0.0</version>
    <description>The dragonfly package</description>

    <maintainer email="john@todo.todo">john</maintainer>

    <license>TODO</license>

    <build_depend>mavros</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>dragonfly_messages</build_depend>
    <build_depend>builtin_interfaces</build_depend>

    <exec_depend>mavros</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>dragonfly_messages</exec_depend>
    <exec_depend>builtin_interfaces</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
