<?xml version="1.0"?>
<package format="3">
  <name>dragonfly</name>
  <version>1.0.0</version>
  <description>The dragonfly package</description>

  <maintainer email="john@todo.todo">john</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mavros</depend>
  <depend>std_msgs</depend>
  <depend>dragonfly_messages</depend>
  <depend>builtin_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

